overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: arduino-api
spec:
  ingressClassName: nginx
  rules:
  - host: api.arduino.tiqra.online
    http:
      paths:
      - backend:
          service:
            name: arduino-api
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.arduino.tiqra.online
    secretName: arduino-api-tls
